test/corpus/basics.txt
================================================================================
Tags
================================================================================

{{ form }}
{{- form -}}
{{- form }}
{{ form -}}
{% form %}
{%- form %}
{% form -%}
--------------------------------------------------------------------------------

(program
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Comment
================================================================================

{%# hello world -%}
{% # hello world -%}

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (content))

================================================================================
Identifiers
================================================================================

{{ x }}

--------------------------------------------------------------------------------

(program
  (identifier)
  (content))

================================================================================
Literals
================================================================================

{{ 1 }}
{{ "hello" }}
{{ 'hello' }}
{{ true }}
{{ false }}

--------------------------------------------------------------------------------

(program
  (number)
  (string)
  (string)
  (boolean)
  (boolean)
  (content))

================================================================================
Dot acccess
================================================================================

{{ product.title }}

--------------------------------------------------------------------------------

(program
  (access
    (identifier)
    (identifier))
  (content))

================================================================================
Array access
================================================================================

{{ pages['about-us'].url }}

--------------------------------------------------------------------------------

(program
  (access
    (identifier)
    (string)
    (identifier))
  (content))
