test/corpus/control_flow.txt
================================================================================
If
================================================================================

{% if 1 == 1 %}

{% endif %}

--------------------------------------------------------------------------------

(program
  (if_expression
    (binary_expression
      (number)
      (comparision_operator)
      (number))))

================================================================================
Else
================================================================================

{% if true %}

{% else %}

{% endif %}

--------------------------------------------------------------------------------

(program
  (if_expression
    (boolean)
    (else_expression)))

================================================================================
Elseif
================================================================================

{% if 1 == x %}
{% elseif 2 %}
{% elseif 5 %}
{% elseif 3 %}
{% else %}
{% endif %}

--------------------------------------------------------------------------------

(program
  (if_expression
    condition: (binary_expression
      left: (number)
      operator: (comparision_operator)
      right: (identifier))
    alternatives: (elseif_expression
      condition: (number))
    alternatives: (elseif_expression
      condition: (number))
    alternatives: (elseif_expression
      condition: (number))
    alternatives: (else_expression)))

================================================================================
If else nesting
================================================================================

{% if a %}
  {% if b %}
    {% if c %}
      {{ c }}
    {% endif %}
  {% endif %}
{% else %}
  {{ d }}
{% endif %}

--------------------------------------------------------------------------------

(program
  (if_expression
    condition: (identifier)
    consequence: (block
      (if_expression
        condition: (identifier)
        consequence: (block
          (if_expression
            condition: (identifier)
            consequence: (block
              (identifier))))))
    alternatives: (else_expression
      consequence: (block
        (identifier)))))
