test/corpus/operators.txt
================================================================================
Equals
================================================================================

{% x == y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Not Equals
================================================================================

{% x != y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Greater than
================================================================================

{% x > y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Less than
================================================================================

{% x < y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Greater than or equal
================================================================================

{% x <= y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Less than or equal
================================================================================

{% x >= y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Contains
================================================================================

{% x contains y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Or
================================================================================

{% x or y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (logical_operator)
    right: (identifier)))

================================================================================
And
================================================================================

{% x and y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (logical_operator)
    right: (identifier)))

================================================================================
Contains
================================================================================

{% x contains y %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    left: (identifier)
    operator: (comparision_operator)
    right: (identifier)))

================================================================================
Operator precedence
================================================================================

{% true and false and false or true %}

--------------------------------------------------------------------------------

(program
  (binary_expression
    (boolean)
    (logical_operator)
    (binary_expression
      (boolean)
      (logical_operator)
      (binary_expression
        (boolean)
        (logical_operator)
        (boolean)))))
